# mysql-opentelemetry-demo

./: .gitignore  .gitmodules  README.md
cpp-client/otel-cpp-starter/: README.md
cpp-client/otel-cpp-starter/roll-dice/: CMakeLists.txt  main.cpp
mysql-server/: README.md  dice.sql
